# evolutionary-music

./: .gitignore  CMakeLists.txt  README.MD  individual.cpp  individual.h  main.cpp
include/: MidiFile.h  individual.h
src/: Binasc.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  Options.cpp  individual.cpp  main.cpp
